--- a/index.html
+++ b/index.html
@@ -11,7 +11,25 @@
 </head>
 <body>
     
-    <h1>ICONS</h1>
+    <header>
+        <div class="container-fluid">
+            <h1>FontIcons</h1>
+        </div>
+        <div class="container-fluid" id="optns-box">
+            <h3>FILTRA PER TIPO</h3>
+            <select name="" id="optns">
+                <option value="all">All</option>
+                <option value="animals">Animals</option>
+                <option value="Foods">Foods</option>
+                <option value="Users">Users</option>
+            </select>
+        </div>
+    </header>
+
+
+    <main>
+
+    </main>
 
     <script src="js/script.js"></script>
 </body>
