new draft of html

--- a/index.html
+++ b/index.html
@@ -30,11 +30,26 @@
     <main>
         <div id="icon-box" class="container-fluid">
             <div class="row">
-                <div class="fonts col-lg col-md-3 col-sm-4"><div class="icons"><i class="fa-solid fa-cat"></i><p>CAT</p></div></div>
-                <div class="fonts col-lg col-md-3 col-sm-4"><div class="icons"><i class="fa-solid fa-crow"></i><p>CROW</p></div></div>
-                <div class="fonts col-lg col-md-3 col-sm-4"><div class="icons"><i class="fa-solid fa-dog"></i><p>DOG</p></div></div>
-                <div class="fonts col-lg col-md-3 col-sm-4"><div class="icons"><i class="fa-solid fa-dove"></i><p>DOVE</p></div></div>
-                <div class="fonts col-lg col-md-3 col-sm-4"><div class="icons"><i class="fa-solid fa-dragon"></i><p>DRAGON</p></div></div>
+                <div class="fonts col-sm"><div class="icons"><i class="fa-solid fa-cat"></i><p>CAT</p></div></div>
+                <div class="fonts col-sm"><div class="icons"><i class="fa-solid fa-crow"></i><p>CROW</p></div></div>
+                <div class="fonts col-sm"><div class="icons"><i class="fa-solid fa-dog"></i><p>DOG</p></div></div>
+                <div class="fonts col-sm"><div class="icons"><i class="fa-solid fa-dove"></i><p>DOVE</p></div></div>
+                <div class="fonts col-sm"><div class="icons"><i class="fa-solid fa-dragon"></i><p>DRAGON</p></div></div>
+                <div class="fonts col-sm"><div class="icons"><i class="fa-solid fa-cat"></i><p>CAT</p></div></div>
+                <div class="fonts col-sm"><div class="icons"><i class="fa-solid fa-crow"></i><p>CROW</p></div></div>
+                <div class="fonts col-sm"><div class="icons"><i class="fa-solid fa-dog"></i><p>DOG</p></div></div>
+                <div class="fonts col-sm"><div class="icons"><i class="fa-solid fa-dove"></i><p>DOVE</p></div></div>
+                <div class="fonts col-sm"><div class="icons"><i class="fa-solid fa-dragon"></i><p>DRAGON</p></div></div>
+                <div class="fonts col-sm"><div class="icons"><i class="fa-solid fa-cat"></i><p>CAT</p></div></div>
+                <div class="fonts col-sm"><div class="icons"><i class="fa-solid fa-crow"></i><p>CROW</p></div></div>
+                <div class="fonts col-sm"><div class="icons"><i class="fa-solid fa-dog"></i><p>DOG</p></div></div>
+                <div class="fonts col-sm"><div class="icons"><i class="fa-solid fa-dove"></i><p>DOVE</p></div></div>
+                <div class="fonts col-sm"><div class="icons"><i class="fa-solid fa-dragon"></i><p>DRAGON</p></div></div>
+                <div class="fonts col-sm"><div class="icons"><i class="fa-solid fa-cat"></i><p>CAT</p></div></div>
+                <div class="fonts col-sm"><div class="icons"><i class="fa-solid fa-crow"></i><p>CROW</p></div></div>
+                <div class="fonts col-sm"><div class="icons"><i class="fa-solid fa-dog"></i><p>DOG</p></div></div>
+                <div class="fonts col-sm"><div class="icons"><i class="fa-solid fa-dove"></i><p>DOVE</p></div></div>
+                <div class="fonts col-sm"><div class="icons"><i class="fa-solid fa-dragon"></i><p>DRAGON</p></div></div>
             </div>
         </div>
     </main>
