take values of select menu

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         <div class="container-fluid" id="optns-box">
             <h3>FILTRA PER TIPO</h3>
             <select name="" id="optns">
-                <option value="all">All</option>
-                <option value="animals">Animals</option>
-                <option value="Foods">Foods</option>
-                <option value="Users">Users</option>
+                <option value="all" id="all">All</option>
+                <option value="animals" id="animals">Animals</option>
+                <option value="Foods" id="foods">Foods</option>
+                <option value="Users" id="users">Users</option>
             </select>
         </div>
     </header>
