draft of header

--- a/index.html
+++ b/index.html
@@ -11,7 +11,18 @@
 </head>
 <body>
     
+    <header>
+        <div id="title" class="container-fluid">
+            <h1>FontIcons</h1>
+        </div>
+        <div id="subtitle" class="container-fluid">
+            <h3>FILTRA PER TIPO</h3>
+        </div>
+    </header>
     
+    <main>
+
+    </main>
 
     <script src="js/script.js"></script>
 </body>
