--- a/index.html
+++ b/index.html
@@ -21,69 +21,11 @@
     </header>
     
     <main>
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-12 col-sm-6 col-md-4 col-lg-3 fonts">
-                    <div class="icon-box">
-                        <i class="fa-solid fa-dog"></i>
-                        <p>DOG</p>
-                    </div>
-                </div>
-                <div class="col-12 col-sm-6 col-md-4 col-lg-3 fonts">
-                    <div class="icon-box">
-                        <i class="fa-solid fa-dog"></i>
-                        <p>DOG</p>
-                    </div>
-                </div>
-                <div class="col-12 col-sm-6 col-md-4 col-lg-3 fonts">
-                    <div class="icon-box">
-                        <i class="fa-solid fa-dog"></i>
-                        <p>DOG</p>
-                    </div>
-                </div>
-                <div class="col-12 col-sm-6 col-md-4 col-lg-3 fonts">
-                    <div class="icon-box">
-                        <i class="fa-solid fa-dog"></i>
-                        <p>DOG</p>
-                    </div>
-                </div>
-                <div class="col-12 col-sm-6 col-md-4 col-lg-3 fonts">
-                    <div class="icon-box">
-                        <i class="fa-solid fa-dog"></i>
-                        <p>DOG</p>
-                    </div>
-                </div>
-                <div class="col-12 col-sm-6 col-md-4 col-lg-3 fonts">
-                    <div class="icon-box">
-                        <i class="fa-solid fa-dog"></i>
-                        <p>DOG</p>
-                    </div>
-                </div>
-                <div class="col-12 col-sm-6 col-md-4 col-lg-3 fonts">
-                    <div class="icon-box">
-                        <i class="fa-solid fa-dog"></i>
-                        <p>DOG</p>
-                    </div>
-                </div>
-                <div class="col-12 col-sm-6 col-md-4 col-lg-3 fonts">
-                    <div class="icon-box">
-                        <i class="fa-solid fa-dog"></i>
-                        <p>DOG</p>
-                    </div>
-                </div>
-                <div class="col-12 col-sm-6 col-md-4 col-lg-3 fonts">
-                    <div class="icon-box">
-                        <i class="fa-solid fa-dog"></i>
-                        <p>DOG</p>
-                    </div>
-                </div>
-                <div class="col-12 col-sm-6 col-md-4 col-lg-3 fonts">
-                    <div class="icon-box">
-                        <i class="fa-solid fa-dog"></i>
-                        <p>DOG</p>
-                    </div>
-                </div>
-            </div>
+        <div id="icons-container" class="container-fluid d-flex flex-wrap">
+            <!-- <div class="icon-box">
+                <i class="fa-solid fa-dog"></i>
+                <p>DOG</p>
+            </div> -->
         </div>
     </main>
 
