styled options button

--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
         </div>
         <div id="subtitle" class="container-fluid">
             <h3>FILTRA PER TIPO</h3>
+            <select name="" id="icons-type">
+                <option value="" id="all">All</option>
+                <option value="" id="animals">Animals</option>
+                <option value="" id="foods">Foods</option>
+                <option value="" id="users">Users</option>
+            </select>
         </div>
     </header>
     
