function to select the right icons with select menu

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         <div id="subtitle" class="container-fluid">
             <h3>FILTRA PER TIPO</h3>
             <select name="" id="icons-type">
-                <option value="" id="all">All</option>
-                <option value="" id="animals">Animals</option>
-                <option value="" id="foods">Foods</option>
-                <option value="" id="users">Users</option>
+                <option value="All">All</option>
+                <option value="Animals">Animals</option>
+                <option value="Foods">Foods</option>
+                <option value="Users">Users</option>
             </select>
         </div>
     </header>
